# Crew-AI-AWSInfra-deploy

./: .env  README.md  agents.yaml  crew.py  main.py  pyproject.toml  requirement.txt  tasks.yaml
